--- a/src/main/webapp/WEB-INF/views/second/exit.html
+++ b/src/main/webapp/WEB-INF/views/second/exit.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My App</title>
+    <title>Exit</title>
 </head>
 <body>
-<p>Hello World!</p>
+<p>No More Links</p>
 </body>
 </html>
