--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>Hello!</p>
-<a href="/first/goodbye">Say GoodBye</a> or <a href="/exit">Exit</a>
+<a href="/first/goodbye">Say GoodBye</a> or <a href="/first/hello?name=Tom&surname=Hardy">Request with parameters</a> or <a href="/exit">Exit</a>
 </body>
 </html>
